MYFACES-3822 General cleanup and remove unused web config params